@@ -16,12 +16,12 @@
 		</dict>
 	</array>
 	<key>fileHierarchyDrawerWidth</key>
-	<integer>245</integer>
+	<integer>277</integer>
 	<key>metaData</key>
 	<dict/>
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{589, 67}, {1234, 1098}}</string>
+	<string>{{564, 81}, {955, 1095}}</string>
 </dict>
 </plist>
