@@ -1,5 +1,9 @@
 2007-07-15  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to place whois dialogs on center of the screen.
+
+2007-07-15  Satoshi Nakagawa <artension@gmail.com>
+
 	Added an option, confirm to quit the application.
 	Changed to display 'specify address' caption in gray color when it is disabled.
 
